lustre/osc/osc_request.c
@@ -2784,7 +2784,12 @@ static void osc_check_rpcs0(const struct lu_env *env, struct client_obd *cli, in
                         else if (rc == 0)
                                 race_counter++;
                 }
-                if (lop_makes_rpc(cli, &loi->loi_read_lop, OBD_BRW_READ)) {
+                /* the ptlrpc_request for OBD_BRW_READ is not from the pool
+                 * of the OSC's obd_import, then it's better to skip READ
+                 * RPCs when the stack is running out.
+                 * */
+                if (likely(!STACK_LOW()) && 
+                    lop_makes_rpc(cli, &loi->loi_read_lop, OBD_BRW_READ)) {
                         rc = osc_send_oap_rpc(env, cli, loi, OBD_BRW_READ,
                                               &loi->loi_read_lop, pol);
                         if (rc < 0)
@@ -2821,7 +2826,15 @@ static void osc_check_rpcs0(const struct lu_env *env, struct client_obd *cli, in
 
 void osc_check_rpcs(const struct lu_env *env, struct client_obd *cli)
 {
+#ifdef __KERNEL__
+        if (unlikely(STACK_LOW())) {
+                LASSERT(cli->cl_writeback_work != NULL);
+                ptlrpcd_queue_work(cli->cl_writeback_work);
+        } else
+               osc_check_rpcs0(env, cli, 0);
+#else
         osc_check_rpcs0(env, cli, 0);
+#endif
 }
 
 /**
